tests/integration/features/sdoc/graph_consistency/07_inline_link_in_metadata_does_not_exist/test.itest
RUN: %expect_exit 1 %strictdoc export %S | filecheck %s --dump-input=fail
CHECK: error: DocumentIndex: the inline link references an object with an UID that does not exist: THIS-DOES-NOT-EXIST.
